# txt2qr

./: .gitignore  .gitmodules  CMakeLists.txt  HISTORY.txt  MSmoothLayout.hpp  QR_Read.hpp  README.md  README.txt  installer.iss  resource.h  txt2qr.cpp  txt2qr_res.rc
lang/: en_US.rc  ja_JP.rc
